manifests-openshift/deploy-acmeair-mainservice-java.yaml
###### Main Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-mainservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-main-deployment
  template:
    metadata:
      labels:
        name: acmeair-main-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-mainservice-java
        image: acmeair-mainservice-java:latest
        ports:
        - containerPort: 9080
        - containerPort: 9443
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-main-service
spec:
  ports:
    - name: 9080-tcp
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    name: acmeair-main-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-secure-main-service
spec:
  ports:
    - name: 9443-tcp
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    name: acmeair-main-deployment
